--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "multer": "^1.4.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
